[tool.poetry]
name = "repl_nix_earthquaqe-bmkg-api"
version = "0.1.0"
description = "this earthquaqe API project is from BMKG"
authors = ["Ridwan Halim <erbyl14@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
requests = "^2.32.4"
xmltodict = "^0.13.0"
dicttoxml = "^1.7.16"
Flask-Limiter = "^3.3.1"
replit = "^3.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
